# habitat-windsurf

./: .env.example  .gitignore  2.23_HANDOFF.md  2_27_Handoff.md  ADAPTIVE_ID_INTEGRATION.md  BREAKTHROUGH_SUMMARY.md  COHERENCE.md  COHERENCE_IN_HABITAT.md  ELASTIC_MEMORY_RAG_PROGRESS.md  EVOLUTIONARY_SEMANTICS.md.bak  EVOLUTIONARY_SEMANTICS_AND_COHERENCE.md  Feb6_Start.md  HABITAT_INNOVATION.md  HABITAT_LEARNING_WINDOWS.BAK.md  HABITAT_LEARNING_WINDOWS.md  HABITAT_SYSTEM_OVERVIEW.md  HANDOFF.md  IMPLEMENTATION_ROADMAP.md  JUMPSTART.md  MIGRATION_PLAN.md  MIGRATION_PLAN_UPDATED.md  MORNING_NOTES.md  NATURAL_SYSTEM_TESTING.md  NEXT_TODOs.md  PATTERN_AWARE_RAG.md  PATTERN_AWARE_RAG_CHECKLIST.md  PRE_MIGRATION_FIXES.md  QUICKSTART_TESTING.md  QUICK_START.md  README.md  README_image_demo.md  STATE.md  TESTING.md  TEST_INVENTORY.md  TEST_PLAN.md  VISUALIZATIONS.md  actant_transformation_story.md  arangodb_diagnostics_20250412_111458.json  arangodb_diagnostics_20250412_111525.json  arangodb_diagnostics_20250412_111545.json  (+67 more)
src/habitat_evolution_old/: __init__.py  pyproject.toml
src/habitat_evolution_old/adapters/document/: processor.py
src/habitat_evolution_old/adapters/pattern/: transformer.py
src/habitat_evolution_old/adapters/user/: api.py
src/habitat_evolution_old/core/: __init__.py
src/habitat_evolution_old/core/config/: __init__.py  field_config.py
src/habitat_evolution_old/core/flow/: __init__.py
src/habitat_evolution_old/core/memory/: __init__.py  memory.py
src/habitat_evolution_old/core/pattern/: __init__.py  evolution.py  metrics.py  quality.py  (+1 more)
(+1224 files in other folders)
